--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
